--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "LeetCode Extension",
-  "version": "0.3.6",
+  "version": "0.4.0",
   "description": "LeetCode.com Extension",
   "browser_action": {
     "default_icon": "favicon.ico",
@@ -28,6 +28,10 @@
     {
       "matches": ["https://leetcode.com/*"],
       "js": ["jquery.js", "leetcode-hidden.js"]
+    },
+    {
+      "matches": ["https://leetcode.com/problems/*"],
+      "js": ["jquery.js", "leetcode-countdown.js"]
     }
   ],
   "manifest_version": 2
