--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "LeetCode Extension",
   "version": "0.4.2",
-  "description": "LeetCode.com Extension: Commit your code to Github, show your progress, hide acceptance and difficulty and countdown for submit button",
+  "description": "LeetCode.com Extension: Commit your code to Github, show your progress, hide difficulty and countdown for submit button",
   "browser_action": {
     "default_icon": "favicon.ico",
     "default_title": "LeetCode Extension",
