--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -1,5 +1,6 @@
 {
   "name": "LeetCode Extension",
+  "short_name": "leetcode-ext",
   "version": "0.4.3",
   "description": "LeetCode.com Extension: Commit your code to Github, show your progress, hide difficulty and countdown for submit button",
   "browser_action": {
