--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -1,10 +1,18 @@
 {
   "name": "LeetCode Extension",
   "short_name": "leetcode-ext",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "LeetCode.com Extension: Commit your code to Github, show your progress, hide difficulty and countdown for submit button",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "browser_action": {
-    "default_icon": "favicon.ico",
+    "default_icon": {
+      "19": "icons/icon19.png",
+      "38": "icons/icon38.png"
+    },
     "default_title": "LeetCode Extension",
     "default_popup": "popup.html"
   },
