add company tag in problem page

--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -47,7 +47,7 @@
       "js": ["lib/jquery.js", "leetcode-countdown.js"]
     },
     {
-      "matches": ["https://leetcode.com/problemset/algorithms/"],
+      "matches": ["https://leetcode.com/problemset/algorithms/", "https://leetcode.com/problems/*"],
       "js": ["lib/jquery.js", "leetcode-unlock.js"]
     }
   ],
