add background: open option page at the first time this extension is installed

--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -16,6 +16,10 @@
     "default_title": "LeetCode Extension",
     "default_popup": "popup/popup.html"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "permissions": [
     "storage",
     "tabs",
