--- a/leetcode-ext/manifest.json
+++ b/leetcode-ext/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "LeetCode Extension",
   "short_name": "leetcode-ext",
-  "version": "1.1.1",
-  "description": "Commit your code to Github, show your progress, hide difficulty and countdown for submit buttons",
+  "version": "1.1.2",
+  "description": "Power your leetcode page, synchronize with your GitHub",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -24,6 +24,7 @@
     "storage",
     "tabs",
     "identity",
+    "notifications",
     "https://chrome-ext.luxiakun.com/*",
     "https://api.github.com/",
     "https://github.com/login/oauth/authorize",
